--- a/views/suppervisordashboard.ejs
+++ b/views/suppervisordashboard.ejs
@@ -53,13 +53,13 @@
                       <h5 class="text-white h4">content</h5>
                       <hr>
                       <div class="d-grid gap-2 ">
-                        <button class="btn btn-primary text-start" type="button">Dashboard</button>
-                        <button class="btn btn-primary text-start" type="button">Project</button>
-                        <button class="btn btn-primary text-start" type="button">Student</button>
-                        <button class="btn btn-primary text-start" type="button">Message</button>
-                        <button class="btn btn-primary text-start" type="button">Approval</button>
-                        <button class="btn btn-primary text-start" type="button">Report</button>
-                        <button class="btn btn-primary text-start" type="button">Log Out</button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/supervisor" style="text-decoration: none; color: white;">Dashboard</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Project</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/supervisor/students" style="text-decoration: none; color: white;">Student</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Message</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Approval</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Report</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Log Out</a></button>
                        
                       </div>
                     </div>
