--- a/views/studentdashboard.ejs
+++ b/views/studentdashboard.ejs
@@ -53,13 +53,13 @@
                       <h5 class="text-white h4">content</h5>
                       <hr>
                       <div class="d-grid gap-2 ">
-                        <button class="btn btn-primary text-start" type="button">Dashboard</button>
-                        <button class="btn btn-primary text-start" type="button">Project</button>
-                        <button class="btn btn-primary text-start" type="button">My Project</button>
-                        <button class="btn btn-primary text-start" type="button">Message</button>
-                        <button class="btn btn-primary text-start" type="button">TO DO Task</button>
-                        <button class="btn btn-primary text-start" type="button">Report</button>
-                        <button class="btn btn-primary text-start" type="button">Log Out</button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/student" style="text-decoration: none; color: white;">Dashboard</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Project</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/student/myproject" style="text-decoration: none; color: white;">My Project</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/student/message" style="text-decoration: none; color: white;">Message</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">TO DO Task</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Report</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Log Out</a></button>
                        
                       </div>
                     </div>
@@ -92,7 +92,7 @@
                               </a>
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
+                          <a href="/student/message" style="text-decoration: none;">
                             <div class="card text-bg-success mb-3" style="max-width: 18rem;">
                                 <div class="card-header">Message</div>
                                 <div class="card-body">
