--- a/views/supervisorMessage.ejs
+++ b/views/supervisorMessage.ejs
@@ -3,18 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>chat</title>
     <link rel="stylesheet" href="Sstyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-  <style>
-    .sidebar{
-    height: 100vh;
-};
-  </style>
+    <script src="/socket.io/socket.io.js"></script>
+    <style>
+      .sidebar{
+      height: 100vh;
+  };
+    </style>
 </head>
   <body>
-    
+    <script>
+
+      //reference socket connection
+      const socket= io('http://localhost:3000')
+       
+      //define any event listeners 
+      socket.on('supervisorMessage', message => {
+           //code to handle message 
+      });
+
+      
+      </script>
+
+
+
+
+
+
+
+
+
+
+
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -66,77 +89,49 @@
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Report</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Log Out</a></button>
                        
+                       
                       </div>
                     </div>
                   </div>
 
             </div>
             <div class="col-10">
-                <div class="card">
-                    <table class="table table-hover">
-                        <thead>
-                          <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Thesis Topic</th>
-                            <th scope="col">Status</th>
-                            <th scope="col"></th>
-                          </tr>
-                        </thead>
-                        <tbody>
+                <div class=" conatainer mt-5">
+                    <div class="card">
+                    <div class="card p-3 " style="max-height: 700px; overflow-y: auto;">
+                    <!-- supervisor -->
+                    <div class="row">
+                     <div class="col-6 supChat">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique fuga assumenda officiis maxime </p>
+                        <p class="text-end">11:00</p>  
+                     </div>   
+                    </div>
+                    <!-- student -->
+                    <div class="row flex-row-reverse ">
+                        <div class="col-6 stuChat">
+                           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique fuga assumenda officiis maxime </p>
+                           <p class="text-end">11:00</p> 
+                        </div>   
+                       </div>
+                       
 
-                          <% listOfStuddentAssigned.forEach(student => { %>
-                            <tr>
-                              <th scope="row"><%- student.fName%>  <%- student.lName %></th>
-                              <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">read More</a></span></td>
-                              <td id="status"><%- student.thesisStatus %></td>
-                              <td>
-                                
-                                <form action="/supervisor/students/supervise" method="post" style="display: inline; margin-right: 5px;">
-                                  <input type="hidden" name="studentID" value="<%- student.ID %>">
-                                <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                              </form>
-                              
-                            </td>
-                              
-                            
-                            </tr>
-                          <!-- description modal -->
-                             <!-- Modal -->
-                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h1 class="modal-title fs-5" id="exampleModalLabel"><%- student.topic %></h1>
-                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                  <%- student.description %>
-                                </div>
-                                <div class="modal-footer">
-                                  <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
-                                 
-                                    <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                                  </form>
-                                
-                                </div>
-                              </div>
-                            </div>
+                    </div>
+                    <form action="">
+                        <div class="input-group mt-3">
+                            <input type="text" class="form-control" placeholder="send a Message" aria-label="Recipient's username" aria-describedby="button-addon2" name="message">
+                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">send</button>
                           </div>
-                          <% }) %>
-
-                         
-                          
-                         
-                          
-                          
-                         
-                      </table>
+                    </form>
                 </div>
+                </div>
+            </div>
 
             </div>
             
         </div>
       </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
