--- a/views/suppervisordashboard.ejs
+++ b/views/suppervisordashboard.ejs
@@ -56,7 +56,7 @@
                         <button class="btn btn-primary text-start" type="button"><a href="/supervisor" style="text-decoration: none; color: white;">Dashboard</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Project</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="/supervisor/students" style="text-decoration: none; color: white;">Student</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Message</a></button>
+                        <button class="btn btn-primary text-start" type="button"><a href="/supervisor/students/message" style="text-decoration: none; color: white;">Message</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Approval</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Report</a></button>
                         <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Log Out</a></button>
