--- a/views/staffRegister.ejs
+++ b/views/staffRegister.ejs
@@ -19,6 +19,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
 rel="stylesheet"
 />
     <title>Document</title>
+    <style>
+      body {
+      background-image: url('images/login.png');
+      background-repeat: no-repeat;
+background-size: cover;
+    }
+    </style>
+  </style>
 </head>
   <body>
     
