--- a/views/HODapproval.ejs
+++ b/views/HODapproval.ejs
@@ -1,93 +1,190 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="Sstyle.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <style>
-      .sidebar{
-                height: 100vh;
-              }
-    </style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Font Awesome -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+rel="stylesheet"
+/>
+
+<style>
+    body {
+  background-color: #fbfbfb;
+}
+@media (min-width: 991.98px) {
+  main {
+    padding-left: 240px;
+  }
+}
+
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  padding: 58px 0 0; /* Height of navbar */
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+  width: 240px;
+  z-index: 600;
+}
+
+@media (max-width: 991.98px) {
+  .sidebar {
+    width: 100%;
+  }
+}
+.sidebar .active {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+</style>
+    <title>Document</title>
 </head>
   <body>
     
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse  flex-row-reverse" id="navbarTogglerDemo02">
-           
-            <ul class="navbar-nav  ">
-                <li class="nav-item dropdown  me-5">
-                    welcome, 
-                    <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      John
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
-                      <li><a class="dropdown-item" href="#">Settings</a></li>
-                      <li>
-                      <form action="/logout" method="post">
-                       <a class="dropdown-item" href="#">Logout</a>
-                      </form>
-                    </li>
-                    
-                    </ul>
-                  </li>
-                  <!-- <li class="g-1">
-                    <a class="" href="#"><i class="bi bi-chat-left-fill"></i></a>
-                </li> -->
-
-            </ul>
+   
+     
+    <!--Main Navigation-->
+<header>
+  <!-- Sidebar -->
+  <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
+    <div class="position-sticky">
+        <div class="list-group list-group-flush mx-3 mt-4">
+            <a
+              href="/HOD"
+              class="list-group-item list-group-item-action py-2 ripple"
+              aria-current="true"
+            >
+              <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+            </a>
+            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
+              <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
+            </a>
+            <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
+            >
+            <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
+          >
             
+            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
+          >
+            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
+            >
+            
+            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+              <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
+            </a>
+           
           </div>
-        </div>
-      </nav>
+    </div>
+  </nav>
+  <!-- Sidebar -->
 
-      <div class="container-fluid m-0">
-        <div class="row ">
-          <div class="col-2 bg-primary sidebar" id="navbarTogglerDemo02">
-            <div class="" >
-                <div class=" ">
-                  <h5 class="text-white h4">content</h5>
-                  <hr>
-                  <div class="d-grid gap-2 ">
-                    <button class="btn btn-primary text-start" type="button"><a href="/HOD" style="text-decoration: none; color: white;"> Dashboard</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Project</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Student</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Message</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="/HOD/HODapproval" style="text-decoration: none; color: white;">Approval</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Report</a></button>
-                        <button class="btn btn-primary text-start" type="button"><a href="" style="text-decoration: none; color: white;">Log Out</a></button>
-                   
-                  </div>
-                </div>
-              </div>
+  <!-- Navbar -->
+  <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+      <!-- Toggle button -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#sidebarMenu"
+        aria-controls="sidebarMenu"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
 
+      <!-- Brand -->
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
+          height="25"
+          alt="MDB Logo"
+          loading="lazy"
+        />
+      </a>
+     
+       <!-- Right links -->
+       <ul class="navbar-nav ms-auto d-flex flex-row">
+       
+       
+        <li class="nav-item dropdown  me-5">
+          welcome, 
+          <a class=" dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <%- user.fName%>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li>
+            <form action="/logout" method="post">
+             <a class="dropdown-item" href="#">Logout</a>
+            </form>
+          </li>
+          
+          </ul>
+        </li>
+        
+        <div class="btn-group">
+          <button type="button" class="btn btn-danger " >
+            Logout
+          </button>
         </div>
-            <div class="col-10">
+        
+        
+
+
+      </ul>
+    </div>
+    <!-- Container wrapper -->
+      
+  </nav>
+  <!-- Navbar -->
+</header>
+<!--Main Navigation-->
+
+            <!--Main layout-->
+<main style="margin-top: 58px;">
+  <div class="container pt-4  ms-5 me-5 text-center" >
                 
               <nav class="m-5">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Student</button>
-                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Supervisor</button>
-                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Panelist</button>
-                  <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false">Assign Student</button>
+                  <a href="#nav-home" class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Student</a>
+                  <a href="#nav-profile" class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Supervisor</a>
+                  <a href="#nav-contact" class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Panelist</a>
+                  <a href="#nav-disabled" class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false">Assign Student</a>
                 </div>
               </nav>
               <div class="tab-content mx-5" id="nav-tabContent">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-            
-                <!-- student approval -->
+                
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
                     <table class="table table-hover">
                         <thead>
@@ -155,25 +252,15 @@
                           </div>
                           <% }) %>
 
-                         
-                          
-                         
-                          
-                          
-                         
                       </table>
                 </div>
                 <!-- supervisor Approval -->
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
-
                   <table class="table table-hover">
                     <thead>
-                      <tr>
                         <th scope="col">Name</th>
                         <th scope="col">Department</th>
                         <th scope="col">Role</th>
-                        
-                      </tr>
                     </thead>
                     <tbody>
 
@@ -188,16 +275,16 @@
 
                 </div>
                 <!-- panelist Approval -->
-                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">...
+                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
                   <table class="table table-hover">
                     <thead>
-                      <tr>
+                    
                         <th scope="col">Name</th>
                         <th scope="col">Department</th>
                         <th scope="col">Role</th>
                         <th scope="col">Status</th>
                         
-                      </tr>
+                   
                     </thead>
                     <tbody>
 
@@ -235,7 +322,7 @@
 
                 </div>
                 <!-- Assign Student to Supervisor -->
-                <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab" tabindex="0">...
+                <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab" tabindex="0">
 
                   <table class="table table-hover">
                     <thead>
@@ -321,12 +408,14 @@
 
                 </div>
               </div>
-               
+            </div>
                   
             </div>
-            
+            </div>
         </div>
       </div>
+
+      
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
