--- a/views/HODDashboard.ejs
+++ b/views/HODDashboard.ejs
@@ -177,85 +177,7 @@
               <div class="container pt-4  ms-5 me-5 text-center">
                     
                 
-<!-- 
-                    <div class="row mt-5 ">
-                        <div class="col-md-4  d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
-                            <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Students</div>
-                                <div class="card-body">
-                                  
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
-                            <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Project</div>
-                                <div class="card-body">
-                                  
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                              </div>
-                              </a>
-                        </div>
-                        <div class="col-md-4 d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
-                            <div class="card text-bg-success mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Message</div>
-                                <div class="card-body">
-                                 
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                              </div>
-                            </a>
-                        </div>
-                    </div>
-            
-                    <div class="row mt-5 ">
-                        <div class="col-md-4  d-flex justify-content-center">
-                          <a href="HOD/HODapproval" style="text-decoration: none;">
-                            <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Approval </div>
-                                <div class="card-body">
-                                  
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
-                            <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Reports</div>
-                                <div class="card-body">
-                                  
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                              </div>
-                              </a>
-                        </div>
-                        <div class="col-md-4 d-flex justify-content-center">
-                          <a href="#" style="text-decoration: none;">
-                            <div class="card text-bg-success mb-3" style="max-width: 18rem;">
-                                <div class="card-header">Grades</div>
-                                <div class="card-body">
-                               
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                              </div>
-                              </a>
-                        </div>
-                    </div>
-                  </div>
-            </div>
-            
-        </div>
-      </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
  
     <div class="row">
       <div class="col-4">
@@ -280,7 +202,7 @@
  <div class="row mt-5">
    
       <div class="col-4" >
-        <a href="/HOD/approval" class="card" style="width: 15rem; height: 15rem;" aria-disabled="true">
+        <a href="/HOD/HODapproval" class="card" style="width: 15rem; height: 15rem;" aria-disabled="true">
             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
             <div class="card-body">
               <p class="card-text">Approval </p>
