hod Section worked on

--- a/views/HODDashboard.ejs
+++ b/views/HODDashboard.ejs
@@ -189,7 +189,7 @@
           </a>
       </div>
       <div class="col-4">
-          <a class="card" href="/supervisor/projectSupervised" style="width: 15rem; height: 15rem;">
+          <a class="card" href="/HOD/thesis" style="width: 15rem; height: 15rem;">
               <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
               <div class="card-body">
                 <p class="card-text">Projects</p>
@@ -225,6 +225,8 @@
 </main>
 <!--Main layout-->
  
- 
+ <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
   </body>
 </html>
