--- a/views/studentRegister.ejs
+++ b/views/studentRegister.ejs
@@ -89,7 +89,7 @@ background-size: cover;
     <label for="department">Department</label>
     <select class="form-select" aria-label="Default select example"  name="department" required>
       <option data-hidden="true"></option>
-      <option value="1">One</option>
+      <option value="Computer Science">Computer Science</option>
       <option value="2">Two</option>
       <option value="3">Three</option>
     </select>
@@ -98,7 +98,7 @@ background-size: cover;
     <label for="department">Program</label>
     <select class="form-select" aria-label="Default select example"  name="Program" required>
       <option data-hidden="true"></option>
-      <option value="1">One</option>
+      <option value="Computer Science">Computer Science</option>
       <option value="2">Two</option>
       <option value="3">Three</option>
     </select>
