--- a/views/HODStudents.ejs
+++ b/views/HODStudents.ejs
@@ -82,8 +82,8 @@ rel="stylesheet"
             <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
               <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
             </a>
-            <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
-              ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
+            <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fas fa-building fa-fw me-3"></i><span>Thesis</span></a
             >
             <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
             ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
@@ -187,44 +187,49 @@ rel="stylesheet"
                         <tbody>
                             
                           <% listOfStudent.forEach(student => { %>
-                            <tr>
-                              <th scope="row"><%- student.fName%>  <%- student.lName %></th>
-                              <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">read More</a></span></td>
-                              <td id="status"><%- student.thesisStatus %></td>
-                              <td>
-                                
-                                <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
-                                  <input type="hidden" name="studentID" value="<%- student.ID %>">
-                                <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                              </form>
-                              
-                            </td>
-                              
-                            
-                            </tr>
-                          <!-- description modal -->
-                             <!-- Modal -->
-                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h1 class="modal-title fs-5" id="exampleModalLabel"><%- student.topic %></h1>
-                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                  <%- student.description %>
-                                </div>
-                                <div class="modal-footer">
-                                  <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
-                                 
-                                    <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                                  </form>
-                                
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <% }) %>
+  <tr>
+    <th scope="row"><%- student.fName%>  <%- student.lName %></th>
+    <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal<%- student.ID %>">read More</a></span></td>
+    <td id="status"><%- student.thesisStatus %></td>
+    <td>
+      <form action="/hod/students/publish" method="post" style="display: inline; margin-right: 5px;">
+        <input type="hidden" name="studentID" value="<%- student.ID %>">
+        <button type="submit" id="publish" class="btn btn-outline-success" name="status" value="publish" >Publish</button>
+        <button type="submit" id="retract" class="btn btn-outline-warning" nam="status" value="retract">Retract</button>
+      </form>
+    </td>
+    <script>
+      if("<%- student.thesisStatus == 'Published' %>" ){
+        document.getElementById("publish").setAttribute("disabled", true)
+      }else if("<%- student.thesisStatus == 'Retracted' %>" ){
+        document.getElementById("retract").setAttribute("disabled", true)
+
+      }
+    </script>
+  </tr>
+  
+  <!-- description modal -->
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal<%- student.ID %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"><%- student.topic %></h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%- student.description %>
+        </div>
+        <div class="modal-footer">
+          <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
+            <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<% }) %>
+
 
                          
                           
@@ -239,7 +244,10 @@ rel="stylesheet"
             
         </div>
       </div>
+      <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
   </body>
 </html>
