--- a/views/HODThesispublish.ejs
+++ b/views/HODThesispublish.ejs
@@ -71,41 +71,36 @@ rel="stylesheet"
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
-      <div class="list-group list-group-flush mx-3 mt-4">
-        <a
-          href="/student"
-          class="list-group-item list-group-item-action py-2 ripple"
-          aria-current="true"
-        >
-          <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
-        </a>
-        <a href="/supervisor" class="list-group-item list-group-item-action py-2 ripple ">
-          <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
-        </a>
-        <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
-        >
-        <a href="/supervisor/students" class="list-group-item list-group-item-action py-2 ripple active"
-        ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
-      >
-        <a href="/supervisor/students/message" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-users fa-fw me-3"></i><span>Messages</span></a
-        >
-        <a href="/plagiarism" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Plagiarism</span></a
-        >
-        <a href="/supervisor/approval" class="list-group-item list-group-item-action py-2 ripple"
-        ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
-      >
-        <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
-        >
-        
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-          <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
-        </a>
-       
-      </div>
+        <div class="list-group list-group-flush mx-3 mt-4">
+            <a
+              href="/HOD"
+              class="list-group-item list-group-item-action py-2 ripple"
+              aria-current="true"
+            >
+              <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+            </a>
+            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
+              <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
+            </a>
+            <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fas fa-building fa-fw me-3"></i><span>Thesis</span></a
+            >
+            <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
+          >
+            
+            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
+          >
+            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
+            >
+            
+            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+              <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
+            </a>
+           
+          </div>
     </div>
   </nav>
   <!-- Sidebar -->
@@ -185,53 +180,49 @@ rel="stylesheet"
                           <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Thesis Topic</th>
-                            <th scope="col">Status</th>
+                            <th scope="col">Year</th>
                             <th scope="col"></th>
                           </tr>
                         </thead>
                         <tbody>
-
-                          <% listOfStuddentAssigned.forEach(student => { %>
-                            <tr>
-                              <th scope="row"><%- student.fName%>  <%- student.lName %></th>
-                              <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">read More</a></span></td>
-                              <td id="status"><%- student.thesisStatus %></td>
-                              <td>
-                                
-                                <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
-                                  <input type="hidden" name="studentID" value="<%- student.ID %>">
-                                <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                                
-                              </form>
-                              
-                            </td>
-                              
                             
-                            </tr>
-                          <!-- description modal -->
-                             <!-- Modal -->
-                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h1 class="modal-title fs-5" id="exampleModalLabel"><%- student.topic %></h1>
-                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                  <%- student.description %>
-                                </div>
-                                <div class="modal-footer">
-                                  <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
-                                 
-                                    <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
-                                    
-                                  </form>
-                                
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <% }) %>
+                          <% findallstudentswithpublish.forEach(student => { %>
+  <tr>
+    <th scope="row"><%- student.fName%>  <%- student.lName %></th>
+    <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal<%- student.ID %>">read More</a></span></td>
+    <td id="status"><%=new Date(student.final_document[0].timestamp).getFullYear() %></td>
+    <td>
+      <form action="/hod/publish/download" method="post" style="display: inline; margin-right: 5px;">
+        <input type="hidden" name="studentID" value="<%- student.ID %>">
+        <button type="submit" id="download" class="btn btn-outline-success" name="status" value="download" >download</button>
+        
+      </form>
+    </td>
+    
+  </tr>
+  
+  <!-- description modal -->
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal<%- student.ID %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"><%- student.topic %></h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%- student.description %>
+        </div>
+        <div class="modal-footer">
+          <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
+            <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<% }) %>
+
 
                          
                           
