--- a/views/HODapproval.ejs
+++ b/views/HODapproval.ejs
@@ -82,7 +82,7 @@ rel="stylesheet"
             <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
               <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
             </a>
-            <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
+            <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
               ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
             >
             <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
@@ -415,8 +415,10 @@ rel="stylesheet"
         </div>
       </div>
 
-      
+      <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
   </body>
 </html>
