--- a/views/myProject.ejs
+++ b/views/myProject.ejs
@@ -173,6 +173,59 @@ rel="stylesheet"
 </header>
 <!--Main Navigation-->
 
+<!-- show final document  -->
+<!-- Modal -->
+<div class="modal fade" id="showModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Final Document</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="/thesis/finalDocument" method="post" enctype="multipart/form-data">
+          <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Thesis Topic</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" name="topic" value="<%= user.topic %>" disabled >
+          </div>
+            <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Final Thesis File</label><br>
+            
+               <input type="hidden" name="studentID" value="<%- user.ID %>">
+                <input type="hidden" name="uploaderType" value="student_final"> <!-- Indicate that the uploader is a student final document -->
+    
+                                  <!-- Add the "name" attribute to the file input -->
+                <input type="file" class="form-control" name="document" id="inputGroupFile02" required>
+                
+            </div>
+            
+
+        <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Abstract</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="abstract" required></textarea>
+        </div>
+       
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+       </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- submit thesis topic modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -220,6 +273,14 @@ rel="stylesheet"
 <!--Main layout-->
 <main style="margin-top: 58px;">
   <div class="container pt-4  ms-5 me-5 text-center">
+
+    <div class="modal" id="autoOpenModal" tabindex="-1">
+  <!-- Modal content here -->
+</div>
+
+
+
+
                     <div class="row mt-5 ">
                         <div class="col-md-4   justify-content-center">
                             <div class="card text-bg-primary mb-3 " >
@@ -237,11 +298,17 @@ rel="stylesheet"
                                         submit Thesis Topic
                                       </button>
                                     <% } %>
+                                    <% if (showModal1) { %>
+                                      <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#showModal1">
+                                        submit Final Document
+                                      </button>
+                                    <% } %>
+
                                     
                                   </div>
                                   <form action="/student/message" method="get" style="display: inline; margin-right: 5px;">
                                     <input type="hidden" name="studentID" value="<%- user.ID %>">
-                                    <button type="submit" id="approve" class="btn btn-outline-warning" >Message</button>
+                                    <button type="submit" id="approve" class="btn btn-outline-warning mt-2" >Message</button>
                                   </form> 
                                 </div>
                             </div>
@@ -383,6 +450,13 @@ rel="stylesheet"
         </div>
       </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
+
+    <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"
+
+  > </script>
+  
   </body>
 </html>
