--- a/views/supervise.ejs
+++ b/views/supervise.ejs
@@ -320,6 +320,28 @@ rel="stylesheet"
                             </form>
                                 
                         </li>
+                        <li class="mt-3 ">
+                                    
+                            <form action="/chapter" method="post">
+                              <h5 style="display: inline;">Formating</h5> 
+                              <input type="hidden" name="studentID" value="<%- studentdetail.ID %>">
+                              <input type="text" name="chapter" value="Formating" hidden>
+                              <button type="submit" class="btn bg-primary ms-5">Done</a>
+
+                            </form>
+                                
+                        </li>
+                        <li class="mt-3 ">
+                                    
+                            <form action="/chapter" method="post">
+                              <h5 style="display: inline;">Defense</h5> 
+                              <input type="hidden" name="studentID" value="<%- studentdetail.ID %>">
+                              <input type="text" name="chapter" value="Approve For Defense" hidden>
+                              <button type="submit" class="btn bg-primary ms-5">Done</a>
+
+                            </form>
+                                
+                        </li>
                               </ul>
                               <!-- <form action="" method="post">
                                 <div class="input-group mb-3">
@@ -371,6 +393,9 @@ rel="stylesheet"
         </div>
       </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
   </body>
 </html>
