--- a/views/suppervisordashboard.ejs
+++ b/views/suppervisordashboard.ejs
@@ -244,5 +244,8 @@ rel="stylesheet"
 </div>
 </main>
 <!--Main layout-->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
   </body>
 </html>
